chore swagger
doc: Add documentation Login ConsultaController
